Removed empty url

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <p class="papertext"><strong>EYESIGHT: Eye Examination System with Intelligent Guidance and Human Tracking</strong><br>
                         <a href="https://alexanderdsmith.github.io/">Alexander D. Smith*</a>,
                         <strong><a href="https://WenzhouDing.github.io/">Wenzhou Ding*</a></strong>,
-                        <a href="">Yuanyi Feng</a>,
+                        <a >Yuanyi Feng</a>,
                         <a href="https://kkhauser.web.illinois.edu/">Kris Hauser</a><br>
                         IEEE International Symposium on Medical Robotics (<strong>ISMR</strong>), 2025<br>
                         <i>Best Paper Award Nomineee</i><br>
@@ -98,10 +98,10 @@
                 <td width="4%"></td>
                 <td width="68%">
                     <p class="papertext"><strong>Multiview 3D Eye Tracking on Off-Axis Images for an Automated Eye Examination System</strong><br>
-                      <a href="">Yuanyi Feng</a>,
+                      <a >Yuanyi Feng</a>,
                       <a href="https://alexanderdsmith.github.io/">Alexander D. Smith</a>,  
                       <strong><a href="https://WenzhouDing.github.io/">Wenzhou Ding</a></strong>,
-                      <a href="">Brijesh Muthumanickam</a>,
+                      <a >Brijesh Muthumanickam</a>,
                       <a href="https://kkhauser.web.illinois.edu/">Kris Hauser</a><br>
                       ICRA Workshop, 2025<br>
                       </p>
@@ -119,8 +119,8 @@
                 <td width="68%">
                     <p class="papertext"><strong>UnityEyes 2: Open Source Robust Synthetic Eye Generation for Camera-Based Eye Tracking with Machine Learning</strong><br>
                         <a href="https://alexanderdsmith.github.io/">Alexander D. Smith</a>,  
-                        <a href="">Brijesh Muthumanickam</a>,
-                        <a href="">Yuanyi Feng</a>,
+                        <a >Brijesh Muthumanickam</a>,
+                        <a >Yuanyi Feng</a>,
                         <strong><a href="https://WenzhouDing.github.io/">Wenzhou Ding</a></strong>,
                         <a href="https://kkhauser.web.illinois.edu/">Kris Hauser</a><br>
                         ACM Symposium on Eye Tracking Research & Applications, 2025<br>
