--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <tbody>
               <tr>
                 <td width="26%">
-                    <img src="https://github.com/WenzhouDing/wenzhouding.github.io/tree/main/images/UE2.gif" style="max-width: 100%; height: auto;" class="papericon">
+                    <img src="https://github.com/WenzhouDing/wenzhouding.github.io/blob/main/images/UE2.gif" style="max-width: 100%; height: auto;" class="papericon">
                 </td>
                 <td width="4%"></td>
                 <td width="68%">
