--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                   I am a first year M.S. student in Computer Science at the <a href="https://cs.illinois.edu/">University of Illinois Urbana-Champaign</a>, advised by <a href="https://kkhauser.web.illinois.edu/">Prof. Kris Hauser</a>. My current research interests lie in medical robotics.
                 </p>
                 <p style="text-align:center">
-                  <a href="mailto:wding8@illinois.edu">Email</a> &nbsp;/&nbsp;
+                  <a href="mailto:wding8(at)illinois(dot)edu">Email</a> &nbsp;/&nbsp;
                   <!-- <a href="data/JonBarron-CV.pdf">CV</a> &nbsp;/&nbsp; -->
                   <!-- <a href="data/JonBarron-bio.txt">Bio</a> &nbsp;/&nbsp; -->
                   <!-- <a href="">GScholar</a> &nbsp;/&nbsp; -->
