--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                   <a href="mailto:wding8(at)illinois(dot)edu">Email</a> &nbsp;/&nbsp;
                   <!-- <a href="data/JonBarron-CV.pdf">CV</a> &nbsp;/&nbsp; -->
                   <!-- <a href="data/JonBarron-bio.txt">Bio</a> &nbsp;/&nbsp; -->
-                  <!-- <a href="">GScholar</a> &nbsp;/&nbsp; -->
+                  <a href="https://scholar.google.com/citations?user=0y1Es0IAAAAJ&hl=en">Scholar</a> &nbsp;/&nbsp;
                   <a href="https://github.com/WenzhouDing">Github</a> 
                   <!-- &nbsp;/&nbsp; -->
                   <!-- <a href="">Twitter</a> -->
@@ -80,8 +80,8 @@
                         <a >Yuanyi Feng</a>,
                         <a href="https://kkhauser.web.illinois.edu/">Kris Hauser</a><br>
                         IEEE International Symposium on Medical Robotics (<strong>ISMR</strong>), 2025<br>
-                        <i>Best Paper Award Nomineee</i><br>
-                        <a href="https://motion.cs.illinois.edu/papers/ISMR2025-Smith-EYESIGHT.pdf">paper</a>&nbsp;/&nbsp;
+                        <b>Best Paper Award Nominee</b><br>
+                        <a href="https://ieeexplore.ieee.org/abstract/document/11025957">paper</a>&nbsp;/&nbsp;
                         <a href="https://www.youtube.com/watch?v=rEbIW6mDWiA">video</a>
                         <!-- <a href="">code</a> -->
                       </p>
@@ -124,7 +124,7 @@
                         <strong><a href="https://WenzhouDing.github.io/">Wenzhou Ding</a></strong>,
                         <a href="https://kkhauser.web.illinois.edu/">Kris Hauser</a><br>
                         ACM Symposium on Eye Tracking Research & Applications, 2025<br>
-                        <a href="https://motion.cs.illinois.edu/papers/ETRA2025_Smith_UnityEyes2.pdf">paper</a>&nbsp;/&nbsp;
+                        <a href="https://dl.acm.org/doi/full/10.1145/3715669.3726838">paper</a>&nbsp;/&nbsp;
                         <a href="https://github.com/alexanderdsmith/UnityEyes2">code</a>
                       </p>
                 </td>
