--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                       <strong><a href="https://WenzhouDing.github.io/">Wenzhou Ding</a></strong>,
                       <a >Brijesh Muthumanickam</a>,
                       <a href="https://kkhauser.web.illinois.edu/">Kris Hauser</a><br>
-                      ICRA Workshop, 2025<br>
+                      ICRA Workshop on Ubiquitous Medical Robotics, 2025<br>
                       </p>
                 </td>
             </tr>
