--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
                 <!-- object-fit: cover; -->
-                <img style="width:100%;max-width:100%;border-radius: 50%;" alt="profile photo" src="https://media.licdn.com/dms/image/v2/D4E03AQFtzhLyvoRj6Q/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1725952543970?e=1755734400&v=beta&t=aGeKCyUn4UyCi5U8IdfZi1pP1_ySDLU-ryXs27HOKPE" class="hoverZoomLink">
+                <img style="width:100%;max-width:100%;border-radius: 50%;" alt="profile photo" src="images/headshot.jpg" class="hoverZoomLink">
               </td>
             </tr>
           </tbody></table>
@@ -70,7 +70,7 @@
             <tbody>
               <tr>
                 <td width="26%">
-                    <img src="https://raw.githubusercontent.com/WenzhouDing/wenzhouding.github.io/main/images/EYESIGHT.jpg" style="max-width: 100%; height: auto;" class="papericon">
+                    <img src="images/EYESIGHT.jpg" style="max-width: 100%; height: auto;" class="papericon">
                 </td>
                 <td width="4%"></td>
                 <td width="68%">
@@ -93,7 +93,7 @@
             <tbody>
               <tr>
                 <td width="26%">
-                    <img src="https://raw.githubusercontent.com/WenzhouDing/wenzhouding.github.io/main/images/EyeTracking.gif" style="max-width: 100%; height: auto;" class="papericon">
+                    <img src="images/EyeTracking.gif" style="max-width: 100%; height: auto;" class="papericon">
                 </td>
                 <td width="4%"></td>
                 <td width="68%">
@@ -113,7 +113,7 @@
             <tbody>
               <tr>
                 <td width="26%">
-                    <img src="https://raw.githubusercontent.com/WenzhouDing/wenzhouding.github.io/main/images/UE2.gif" style="max-width: 100%; height: auto;" class="papericon">
+                    <img src="images/UE2.gif" style="max-width: 100%; height: auto;" class="papericon">
                 </td>
                 <td width="4%"></td>
                 <td width="68%">
