Add EYESIGHT JMRR

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <h2>News</h2>
+              <p><b>[Dec 2025]</b> EYESIGHT (expanded version) accepted to JMRR 2025!</p>
               <p><b>[May 2025]</b> Graduated from UIUC and will be continuing with MSCS this fall!</p>
               <p><b>[Feb 2025]</b> EYESIGHT accepted to ISMR 2025!</p>
             </td>
@@ -64,7 +65,28 @@
               </tr>
             </tbody></table>
             <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-            <!-- EYESIGHT -->
+            <!-- EYESIGHT JMRR -->
+            <table border=0 class="bg_colour"
+            style="padding:10px;width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+            <tbody>
+              <tr>
+                <td width="26%">
+                    <img src="" style="max-width: 100%; height: auto;" class="papericon">
+                </td>
+                <td width="4%"></td>
+                <td width="68%">
+                    <p class="papertext"><strong>The EYESIGHT Robotic Eye Examination System for Non-Mydriatic Indirect Retinal Imaging on Unconstrained Individuals</strong><br>
+                        <a href="https://alexanderdsmith.github.io/">Alexander D. Smith*</a>,
+                        <strong><a href="https://WenzhouDing.github.io/">Wenzhou Ding*</a></strong>,
+                        <a >Lorenzo Vianello</a>,
+                        <a >Erica Person</a>,
+                        <a href="https://kkhauser.web.illinois.edu/">Kris Hauser</a><br>
+                        Journal of Medical Robotics Research (<strong>JMRR</strong>), 2025<br>
+                        <a href="https://www.worldscientific.com/doi/abs/10.1142/S2424905X26400015">paper</a>
+                      </p>
+                </td>
+            </tr>
+            <!-- EYESIGHT ISMR -->
             <table border=0 class="bg_colour"
             style="padding:10px;width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
@@ -83,7 +105,6 @@
                         <b>Best Paper Award Nominee</b><br>
                         <a href="https://ieeexplore.ieee.org/abstract/document/11025957">paper</a>&nbsp;/&nbsp;
                         <a href="https://www.youtube.com/watch?v=rEbIW6mDWiA">video</a>
-                        <!-- <a href="">code</a> -->
                       </p>
                 </td>
             </tr>
